<?xml version="1.0" encoding="UTF-8"?>

<!--
~ Copyright (c) 2015 GraphAware
~
~ This file is part of GraphAware.
~
~ GraphAware is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License
~ as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
~
~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
~ warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
~
~ You should have received a copy of the GNU General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.graphaware.integration.es</groupId>
  <artifactId>elasticsearch-to-neo4j</artifactId>
  <version>0.2-SNAPSHOT</version>

  <properties>
    <java.version>1.7</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <elasticsearch.version>2.1.1</elasticsearch.version>
    <elasticsearch.plugin.classname>com.graphaware.integration.es.plugin.GAQueryResultNeo4jPlugin</elasticsearch.plugin.classname>
    <maven.compiler.source>1.7</maven.compiler.source>
    <maven.compiler.target>1.7</maven.compiler.target>
  </properties>

  <name>GraphAware Neo4j Integration for Elasticsearch</name>
  <description>Elasticsearch Plugin for Integration with Neo4j</description>
  <url>http://graphaware.com</url>

  <licenses>
    <license>
      <name>GNU General Public License, version 3</name>
      <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git@github.com:graphaware/elasticsearch-to-neo4j.git</connection>
    <developerConnection>scm:git:git@github.com:graphaware/elasticsearch-to-neo4j.git</developerConnection>
    <url>git@github.com:graphaware/elasticsearch-to-neo4j.git</url>
    <tag>HEAD</tag>
  </scm>

  <developers>
    <developer>
      <id>alenegro</id>
      <name>Alessandro Negro</name>
      <email>alessandro@graphaware.com</email>
    </developer>
    <developer>
      <id>bachmanm</id>
      <name>Michal Bachman</name>
      <email>neo4j-es@graphaware.com</email>
    </developer>
  </developers>

  <ciManagement>
    <url>https://travis-ci.org/graphaware/elasticsearch-to-neo4j</url>
    <system>Travis CI</system>
  </ciManagement>

  <inceptionYear>2015</inceptionYear>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/graphaware/elasticsearch-to-neo4j/issues</url>
  </issueManagement>

  <organization>
    <name>Graph Aware Limited</name>
    <url>http://graphaware.com</url>
  </organization>

  <dependencies>

    <dependency>
      <groupId>org.elasticsearch</groupId>
      <artifactId>elasticsearch</artifactId>
      <version>${elasticsearch.version}</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>org.apache.lucene</groupId>
          <artifactId>lucene-core</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>com.sun.jersey</groupId>
      <artifactId>jersey-client</artifactId>
      <version>1.19</version>
    </dependency>
    <dependency>
      <groupId>com.sun.jersey</groupId>
      <artifactId>jersey-json</artifactId>
      <version>1.19</version>
    </dependency>
    <dependency>
      <groupId>org.codehaus.jackson</groupId>
      <artifactId>jackson-jaxrs</artifactId>
      <version>1.9.13</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>18.0</version>
    </dependency>
    <dependency>
      <groupId>org.reflections</groupId>
      <artifactId>reflections</artifactId>
      <version>0.9.9</version>
    </dependency>
    
    
    <dependency>
	<groupId>javax.mail</groupId>
	<artifactId>javax.mail-api</artifactId>
	<version>1.5.5</version>
    </dependency>


    <!-- Test dependencies -->

    <dependency>
      <groupId>com.graphaware.integration.es</groupId>
      <artifactId>neo4j-to-elasticsearch</artifactId>
      <version>2.2.6.35.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>recommendation-engine</artifactId>
      <version>2.2.6.35.9</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>runtime</artifactId>
      <version>2.2.6.35</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>server-common</artifactId>
      <version>2.2.6.35</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>server-community</artifactId>
      <version>2.2.6.35</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>uuid</artifactId>
      <version>2.2.6.35.7</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>tests</artifactId>
      <version>2.2.6.35</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.graphaware.neo4j</groupId>
      <artifactId>common</artifactId>
      <version>2.2.6.35</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.neo4j</groupId>
      <artifactId>neo4j</artifactId>
      <version>2.2.6</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.graphaware.integration.es</groupId>
      <artifactId>neo4j-elasticsearch-tests</artifactId>
      <version>1.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>compile</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.basedir}/target</outputDirectory>
              <excludeArtifactIds>logback-classic,logback-core,logback-access,lucene-core</excludeArtifactIds>
              <overWriteReleases>true</overWriteReleases>
              <overWriteSnapshots>true</overWriteSnapshots>
              <overWriteIfNewer>true</overWriteIfNewer>
              <includeScope>compile</includeScope>
            </configuration>
          </execution>
          <execution>
            <id>copy-model</id>
            <phase>compile</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <overWriteReleases>true</overWriteReleases>
              <overWriteSnapshots>false</overWriteSnapshots>
              <overWriteIfNewer>true</overWriteIfNewer>
              <artifactItems>
                <artifactItem>
                  <groupId>org.apache.lucene</groupId>
                  <artifactId>lucene-core</artifactId>
                  <version>4.10.4</version>
                  <overWrite>false</overWrite>
                </artifactItem>
                <artifactItem>
                  <groupId>com.graphaware.integration.es</groupId>
                  <artifactId>neo4j-elasticsearch-tests</artifactId>
                  <version>1.0</version>
                  <classifier>jar-with-dependencies</classifier>
                  <overWrite>false</overWrite>
                </artifactItem>
              </artifactItems>
              <outputDirectory>${project.basedir}/target</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.18.1</version>
        <configuration>
          <skip>true</skip>
          <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
          <systemPropertyVariables>
            <classpath>${project.basedir}/target</classpath>
          </systemPropertyVariables>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>2.8.1</version>
        <configuration>
          <retryFailedDeploymentCount>10</retryFailedDeploymentCount>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.6.3</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>ossrh</serverId>
          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
          <autoReleaseAfterClose>true</autoReleaseAfterClose>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <autoVersionSubmodules>true</autoVersionSubmodules>
          <useReleaseProfile>false</useReleaseProfile>
          <releaseProfiles>release</releaseProfiles>
          <goals>deploy</goals>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.6</version>
        <configuration>
          <appendAssemblyId>false</appendAssemblyId>
          <outputDirectory>${project.build.directory}/releases/</outputDirectory>
          <descriptors>
            <descriptor>${basedir}/src/main/assemblies/plugin.xml</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>